app/assets/stylesheets/customs.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "froala_editor.min.css";
@import "froala_style.min.css";
@import "font-awesome-sprockets";
@import "font-awesome";

.display-none {
  display: none;
}

.tag-user-item {
  background: #d8d8d8;
  padding: 0 4px;
  color: #028c0f !important;
  border-radius: 4px;
  margin: 5px;
}

.tagUsers-search {
  margin: 5px;
  border: solid 1px rgba(128, 128, 128, 0.71);
  border-radius: 5px !important;
}

.tagUsers-list-user {
  margin: 5px;
  overflow-y: scroll;
  max-height: 100px;
  .tags-user-item {
    margin: 2px 0 !important;
    padding: 3px 5px !important;
  }
  .tags-user-item:hover {
    background: rgba(128, 128, 128, 0.35);
    cursor: pointer;
  }
}

.img-upload {
  width: 300px;
  height: 300px;
  object-fit: cover;
}

.truncate-post {
  max-height: 100px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

.post-not-answers {
  font-weight: 200;
  font-style: italic;
  width: 100%;
  text-align: center;
  padding: 15px;
  color: gray;
}

.vote-of-post {
  font-size: 25px;
  font-weight: bold;
  color: black;
  box-shadow: 2px 2px 1px 1px grey;
  border-radius: 10px;
  .point-vote {
    padding: 5px 0;
  }
  .btn-vote:hover {
    text-shadow: 1px 1px 3px;
  }
}

.fa-thumbs-down {
  transform: rotateY(3rad);
  -moz-transform: rotateY(3rad);
  -webkit-transform: rotateY(3rad);
  -ms-transform: rotateY(3rad);
  -o-transform: rotateY(3rad);
}

.topic-active {
  color: #be161e !important;
  text-shadow: 1px 1px 1px rgba(190, 22, 30, 0.38);
}

.float-right {
  float: right;
}

a:hover {
  text-shadow: 0.5px 0.5px 3px;
}

.comment-list {
  margin-left: 10%;
  .comment-item {
    padding: 5px;
    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.02);
    margin-bottom: 10px;
    position: relative;
    border-radius: 5px;
    .item-avatar {
      width: 50px;
      height: 50px;
      border-radius: 50px;
      border: solid 1px;
      position: absolute;
      top: 30px;
      transform: translateY(-50%);
    }
    .item-body {
      padding-left: 60px;
      .item-name {
        display: inline;
      }
      .item-time {
        font-size: 10px;
        display: inline;
        float: right;
        text-transform: uppercase;
      }
    }
  }
}

.comment-new {
  display: none;
}

.add-new-comment {
  padding-left: 10%;
}

p {
  img {
    height: auto !important;
  }
}

.one-line {
  width: 100%;
  border: solid 0.5px #e5eaef;
  border-bottom: none;
  margin-top: 20px;
  margin-bottom: 20px;
}

.all_tags {
  float: right;
}

.modal {
  .modal-header {
    background-color: #be161e;
    color: white;
  }
}

.resize-none {
  resize: none;
}

.fixed-size-square {
  display: table;
  width: 180px;
  height: 180px;
  background: #4679BD;
}
.fixed-size-square span {
  display: table-cell;
  text-align: center;
  vertical-align: middle;
  color: white;
  font-size: 20px;
}

.cursor-custom {
  cursor:pointer;
}

.pd-top-10 {
  padding-top: 10px;
}

.notification-text {
  top: 20%;
}

.wsm {
  background-color: #ff8100;
  width: 100%;
  color: white;
  .icons {
    float: left;
    margin-left: 20px !important;
    width: 40px;
    margin-top: -10px;
    margin-bottom: -10px;
  }
}

.wsm:hover {
  background-color: #ff8100;
  width: 100%;
  color: white;
  text-shadow: 1px 1px 3px;
}

.wsm-icon {
  width: 56.5px;
}

.mg-bt-0 {
  margin-bottom: 0 !important;
}
.content-post{
  max-height: 70px;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #000000;
}
.listing-grid p {
  overflow: hidden;
  text-overflow: ellipsis;
}
.text-center.owner-avatar{
  width: 12%
}
@media (min-width: 992px){
  .content-notification{
    margin-left: -80px !important;
  }
  .search-header{
    width: 120% !important;
  }
}
@media (min-width: 768px){
  .content-notification{
    margin-left: -15px;
  }
}

.btn-submit-search{
  left: 15px;
  top: 10px;
  position: absolute;
  z-index: 2;
  background: none;
  border: none;

}
.btn-submit-search:focus{
  outline:0;
}
.time-notification{
  float: right;
}
.time-notification .time{
  padding-top: 50px !important;
  padding-right: 0px !important;
}
.info-tag .list-tags .tag-item{
  margin-left: 0px;
}
.info-tag {
  padding-left: 0px;
}
.info-tag .custom-padding{
  padding: 30px 0 20px 0
}
.section-margin-bottom{
  margin-bottom: 50px;
}
.list-tab > li.active > a{
  color: #be161e !important;
}
.list-tab > li a{
  color: #000;
  margin-right: 0px !important;
}
.list-tab > li > a:hover{
  color: #be161e !important;
}
.list-tab > li.active {
  border-top: #be161e solid 3px !important;
  border-radius: 4px;
}
.list-tab > li{
  border-top: #fff solid 3px !important;
  border-radius: 4px;
}
.tab-post .tab-content{
  margin-top: 0px !important;
  border-right: #ddd solid 1px;
  border-left: #ddd solid 1px;
  border-bottom: #ddd solid 1px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}
.tab-post .tab-pane{
  padding: 50px 25px 0px 25px;
}
.paginate-notify{
  padding-top: 30px;
}
.setting .panel-group .panel {
  border-radius: 4px;
  border: 1px solid #ddd;
}
.setting .panel-group .panel table tr td {
  border-top: 1px solid #f4f4f4;
  color: #333;
}
.setting .panel-group .panel table > thead > tr > th {
  border-bottom: 2px solid #f4f4f4;
  color: #333;
}
.setting .panel-group .panel.none-border table tr td,
.setting .panel-group .panel.none-border table tr th {
  border-top: none;
}
.setting .panel-group .panel.none-border table .form-control {
  border-radius: 4px !important;
  border-color: #d2d6de;
  height: 34px;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857143;
  color: #555;
}
.setting .panel.none-border table {
  margin-bottom: 20px !important;
}
.setting .choose_language {
  line-height: 2.3;
  color: #333;
}
.onoffswitch {
  position: relative;
  width: 50px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}
.onoffswitch-checkbox {
  display: none;
}
/* ... */

